# ARDUINO

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure  make  package  requirements.txt
.github/workflows/: build.yml  cleanup.yml  stale.yml
lib/Grove 4-Digit Display_ID5064/: TM1637.cpp  TM1637.h
lib/PinChangeInt-master/: PinChangeInt.h
lib/TM1637/: TM1637.h
lib/buttons/: Buttons.cpp  NIButtons.cpp  NIButtons.h
lib/i_buttons/: IButtons.cpp
lib/ni_buttons/: NIButtons.cpp  NIButtons.h
lib/service/: Service.cpp  Service.h
servo-pot/: CMakeLists.txt  platformio.ini
servo-pot/src/: servo-pot.cpp
skarsta/: CMakeLists.txt  README.md  platformio.ini  wiring-h-bridge.fzz  wiring-relay.fzz
skarsta/configs/: nanoatmega168.ini  nanoatmega328.ini  ptester.ini
skarsta/docs/: case_bridge-v1.md  case_bridge-v2.md  case_motor-v2.md  case_relays-v1.md  case_relays-v2.md  panel-v1.md  panel-v2.md  sensor-hall.md  sensor-rot.md  sensor-sonar.md  serial-control.md  wiring-relay.fzz  wiring-ubridge.fzz  wiring-urelay.fzz
skarsta/models/: buttons.stl  case-modular-aio.stl  case-modular-frame.stl  case-top.stl  encoder-pulley.stl  gate-ring.stl  keypad-connector.stl  leg-table-tie.stl  motor-pulley-opto.stl  motor-pulley.stl  opto-adapter.stl  opto-bracket.stl  panel-bottom.stl  panel-cover-bridge.stl  panel-cover.stl  shaft-template.stl  table-frame-tie.stl
skarsta/src/: configuration.h  main.cpp  ptester.cpp  skarsta.cpp
yarn-winder/: README.md  platformio.ini  wiring.fzz
yarn-winder/models/: arm-bolt-wide.stl  arm-bolt.stl  arm.stl  (+28 more)
(+89 files in other folders)
